--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -2155,7 +2155,7 @@ CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_PALMSENSOR=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_GAMEMODE=y
 CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI=y
-CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
+# CONFIG_TOUCHSCREEN_NVT_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -2481,11 +2481,8 @@ CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_DYNAMIC is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
-CONFIG_SPMI_SIMULATOR=y
-CONFIG_PM8150_PMIC_SIMULATOR=y
-CONFIG_PM8150B_PMIC_SIMULATOR=y
-CONFIG_PM8150L_PMIC_SIMULATOR=y
+# CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
+# CONFIG_SPMI_SIMULATOR is not set
 CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
@@ -3061,7 +3058,7 @@ CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
-CONFIG_VIDEO_ADV_DEBUG=y
+# CONFIG_VIDEO_ADV_DEBUG is not set
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VIDEOBUF2_CORE=y
@@ -3183,7 +3180,7 @@ CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
+# CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG is not set
 CONFIG_MSM_NPU=y
 CONFIG_DVB_MPQ=y
 
@@ -3382,7 +3379,7 @@ CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
 CONFIG_DRM_MSM_KCAL_CTRL=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+# CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM_MSM_LEASE is not set
@@ -4377,7 +4374,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_VSERVICES_SUPPORT=y
 CONFIG_VSERVICES_CHAR_DEV=y
 # CONFIG_VSERVICES_DEBUG is not set
-CONFIG_VSERVICES_LOCK_DEBUG=y
+# CONFIG_VSERVICES_LOCK_DEBUG is not set
 CONFIG_VSERVICES_SERVER=y
 CONFIG_VSERVICES_CLIENT=y
 # CONFIG_VSERVICES_SKELETON_DRIVER is not set
@@ -4708,9 +4705,7 @@ CONFIG_ARM_SMMU=y
 # CONFIG_IOMMU_TLBSYNC_DEBUG is not set
 # CONFIG_ARM_SMMU_TESTBUS_DUMP is not set
 CONFIG_QCOM_LAZY_MAPPING=y
-CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
-CONFIG_IOMMU_TESTS=y
+# CONFIG_IOMMU_DEBUG is not set
 # CONFIG_QCOM_IOMMU is not set
 
 #
@@ -5761,7 +5756,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_ARCH_WANTS_UBSAN_NO_NULL is not set
 # CONFIG_UBSAN is not set
 CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
-CONFIG_ARM64_PTDUMP_CORE=y
+# CONFIG_ARM64_PTDUMP_CORE is not set
 # CONFIG_ARM64_PTDUMP_DEBUGFS is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
