--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.254 Kernel Configuration
+# Linux/arm64 4.14.255 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -141,6 +141,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
+CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
 # CONFIG_MEMCG is not set
 CONFIG_BLK_CGROUP=y
@@ -1230,6 +1231,7 @@ CONFIG_NET_SWITCHDEV=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 CONFIG_QRTR=y
 CONFIG_QRTR_NODE_ID=1
+CONFIG_QRTR_WAKEUP_MS=0
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
 # CONFIG_QRTR_USB is not set
